--- a/src/app/chart/chart-side-bar/chart-side-bar.component.css
+++ b/src/app/chart/chart-side-bar/chart-side-bar.component.css
@@ -63,9 +63,8 @@ button {
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
-  flex-direction: row;
+  gap: 0.5em;
   align-items: center;
-  justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
 }
