--- a/src/app/graph/graph-side-bar/graph-side-bar.component.html
+++ b/src/app/graph/graph-side-bar/graph-side-bar.component.html
@@ -24,29 +24,16 @@
             <div id="selectedGroupByColumns" #selectedColList="cdkDropList" cdkDropList #selectedColumnsList="cdkDropList"
                  [cdkDropListData]="selectedGroupByColumns" [cdkDropListConnectedTo]="availableColList"
                  class="div_column_list" (cdkDropListDropped)="dropGroupByColumn($event)">
-               <div class="div_column_item accent" mat-stroked-button *ngFor="let column of selectedGroupByColumns" cdkDrag>
-                  <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>&nbsp;{{ column.name }}
-                  <div class="select_time_unit" *ngIf="column.dataType !== 'Time'"></div>
-                  <mat-select class="select_time_unit" *ngIf="column.dataType === 'Time'" [(ngModel)]="column.groupingTimeUnit">
-                     <mat-option *ngFor="let timeUnit of selectableTimeUnits" [value]="timeUnit" (click)="context.fireStructureChanged()">
-                        {{ timeUnit ? 'per ' + timeUnit : '' }}</mat-option>
-                  </mat-select>
-               </div>
+               <koia-draggable-column *ngFor="let column of selectedGroupByColumns" [context]="context" [column]="column" cssClass="accent">
+               </koia-draggable-column>
             </div>
             <br>
             <label>Available Columns</label>
             <div #availableColList="cdkDropList" cdkDropList [cdkDropListData]="availableGroupByColumns"
                  [cdkDropListConnectedTo]="selectedColList" class="div_column_list"
                  (cdkDropListDropped)="dropGroupByColumn($event)">
-               <div class="div_column_item white" mat-stroked-button *ngFor="let column of availableGroupByColumns"
-                    cdkDrag>
-                  <mat-icon>{{ iconOf(column.dataType) }}</mat-icon>&nbsp;{{ column.name }}
-                  <div class="select_time_unit" *ngIf="column.dataType !== 'Time'"></div>
-                  <mat-select class="select_time_unit" *ngIf="column.dataType === 'Time'" [(ngModel)]="column.groupingTimeUnit">
-                     <mat-option *ngFor="let timeUnit of selectableTimeUnits" [value]="timeUnit">
-                        {{ timeUnit ? 'per ' + timeUnit : '' }}</mat-option>
-                  </mat-select>
-               </div>
+               <koia-draggable-column *ngFor="let column of availableGroupByColumns" [context]="context" [column]="column" cssClass="white">
+               </koia-draggable-column>
             </div>
          </div>
       </koia-expansion-panel>
