--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -86,7 +86,7 @@
                   </div>
                   <div class="div_title">
                      <textarea matInput class="textarea_title" type="text" [value]="context.getTitle()"
-                               koiaTextareaMaxRows="2" (keyup)="context.title = $event.target.value"></textarea>
+                               [textareaMaxRows]="2" (keyup)="context.title = $event.target.value"></textarea>
                   </div>
                   <button mat-icon-button class="but_warning" *ngIf="context.warning" [matTooltip]="context.warning"
                           color="warn">
