--- a/src/app/scene/scene.component.html
+++ b/src/app/scene/scene.component.html
@@ -178,17 +178,15 @@
              matTooltipClass="tooltip_preview_warning" />
         &nbsp;
         <button id="but_load_data" mat-raised-button color="primary" matTooltip="Loads all data to the database"
-                [disabled]="maxItemsToLoadControl.value < 1 || maxItemsToLoadControl.value > maxItemsPerScene"
-                (click)="persistScene()">
+                [disabled]="maxItemsToLoadControl.invalid" (click)="persistScene()">
           Load Data
         </button>
         &nbsp;
         <mat-form-field class="max_items">
           <mat-label>Max. items</mat-label>
-          <input matInput type="number" required min="1"
-                 [max]="maxItemsPerScene" step="1" [formControl]="maxItemsToLoadControl"
+          <input matInput type="text" required [formControl]="maxItemsToLoadControl"
                  [matTooltip]="'Maximum number of items to be loaded\n(min: 1, max: ' + maxItemsPerScene.toLocaleString() + ')'"
-                 matTooltipClass="multi-line-tooltip" onfocusout="this.value = Number(this.value)">
+                 formattedInteger matTooltipClass="multi-line-tooltip">
           <mat-error *ngIf="maxItemsToLoadControl.invalid">{{ 'Exp. 1-' + maxItemsPerScene }}</mat-error>
         </mat-form-field>
         &nbsp;
