--- a/src/app/scene/scene.component.css
+++ b/src/app/scene/scene.component.css
@@ -9,12 +9,12 @@ h1 {
 }
 
 .scene_name {
-  width: 250px;
+  width: 25em;
   padding-right: 10px;
 }
 
 .scene_short_desc {
-  width: 500px;
+  width: 50em;
   padding-right: 10px;
 }
 
@@ -23,7 +23,7 @@ h1 {
 }
 
 .file_name {
-  width: 500px;
+  width: 50em;
   padding-left: 10px;
 }
 
@@ -34,7 +34,7 @@ p {
 #textarea_data_sample {
   display: block;
   width: 100%;
-  height: 10em;
+  height: 15em;
   overflow-x: auto;
 }
 
@@ -66,13 +66,8 @@ mat-slide-toggle {
 }
 
 #div_preview_table {
-  height: 500px;
-  overflow-y: auto;
-}
-
-table {
-  width: 100%;
-  table-layout: fixed;
+  height: 30em;
+  overflow: auto;
 }
 
 th {
