got rid of moment library in production code

--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -275,7 +275,7 @@
                 element size also changes in order to always fit the allocated grid space.
               </li>
               <li>The <b>Flex View</b> contains a variable number of elements (summary tables, charts and graphs) of
-                specific size each. When the window size changes, the size of single elements are not changed. The
+                specific size each. When the window size changes, the size of single elements is not changed. The
                 elements are however automatically laid out according to the available window space.</li>
             </ul>
           </mat-card-content>
